--- a/cadastro.html
+++ b/cadastro.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="pt-br">
-  <head>
+
+<head>
 
     <title>Cadastro</title>
 
@@ -10,18 +11,42 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
 
-  </head>
+</head>
 
-  <body>
+<body>
+    <nav class="fixed-top navbar navbar-expand-sm navbar-dark bg-dark">
+
+        <!-- Logo -->
+        <a href="" class="navbar-brand">
+            <img src="./img/logo.png" class="logo" alt="">
+        </a>
+        <!-- Menu Hamburguer -->
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#navegacao">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- navegacao -->
+        <div class="collapse navbar-collapse" id="navegacao">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a href="index.html" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link">Listagem</a>
+                </li>
+                <li class="nav-item">
+                    <a href="cadastro.html" class="nav-link">Cadastro</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link">Sobre</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     <div class="container-fluid">
-        <div class="row">
-            Logo
-        </div>
-        <div class="row">
-            Menu
-        </div>
         <form>
             <div class="row">
                 <div class="form-group col-md-6">
@@ -64,25 +89,78 @@
             <div class="row">
                 <div class="form-group col-md-12">
                     <label for="mensagem">Descrição</label>
-                    <textarea class="form-control" id="descricao" rows="3" placeholder="Insira a descrição do veículo"></textarea>
+                    <textarea class="form-control" id="descricao" rows="3"
+                        placeholder="Insira a descrição do veículo"></textarea>
                 </div>
             </div>
             <div class="row justify-content-end">
                 <input class="btn btn-primary" type="submit" value="Cadastrar Veículo">
                 <input class="btn btn-secondary ml-2 mr-3" type="submit" value="Limpar">
             </div>
-            
+
         </form>
 
         <div class="row">
             Rodape
         </div>
-        
+
     </div>
+    <footer class="fixed-bottom">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 d-none d-lg-block">
+                    <img src="img/logo.png" class="logo2" width="142">
+                </div>
+                <div class="col-6 col-sm-3 col-lg-2">
+                    <h4>Menu</h4>
+                    <ul class="navbar-nav">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="">Listagem</a></li>
+                        <li><a href="cadastro.html">Cadastro</a></li>
+                        <li><a href="">Sobre</a></li>
+                    </ul>
+                </div>
+                <div class="col-6 col-sm-3 col-lg-2">
+                    <h4>Titulo</h4>
+                    <ul class="navbar-nav">
+                        <li><a href="">Link</a></li>
+                        <li><a href="">Link</a></li>
+                        <li><a href="">Link</a></li>
+                    </ul>
+                </div>
+                <div class="col-6 col-sm-3 col-lg-2">
+                    <h4>Titulo</h4>
+                    <ul class="navbar-nav">
+                        <li><a href="">Link</a></li>
+                        <li><a href="">Link</a></li>
+                        <li><a href="">Link</a></li>
+                    </ul>
+                </div>
+                <div class="col-6 col-sm-3 col-lg-3">
+                    <ul>
+                        <li>
+                            <a href=""><img src="img/facebook.png"></a>
+                        </li>
+                        <li>
+                            <a href=""><img src="img/twitter.png"></a>
+                        </li>
+                        <li>
+                            <a href=""><img src="img/instagram.png"></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
     <script src="js/bootstrap.min.js"></script>
-  </body>
+</body>
+
 </html>
