--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/sticky-footer/">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
     integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/style.css">
@@ -24,7 +25,7 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+  <nav class="fixed-top navbar navbar-expand-sm navbar-dark bg-dark">
 
     <!-- Logo -->
     <a href="" class="navbar-brand">
@@ -39,13 +40,13 @@
     <div class="collapse navbar-collapse" id="navegacao">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a href="" class="nav-link">Home</a>
+          <a href="index.html" class="nav-link">Home</a>
         </li>
         <li class="nav-item">
           <a href="" class="nav-link">Listagem</a>
         </li>
         <li class="nav-item">
-          <a href="" class="nav-link">Cadastro</a>
+          <a href="cadastro.html" class="nav-link">Cadastro</a>
         </li>
         <li class="nav-item">
           <a href="" class="nav-link">Sobre</a>
@@ -61,7 +62,8 @@
         <div class="col-md-6 d-flex">
           <!-- Textos da seção -->
           <div class="align-self-center">
-            <h1 class="display-4">Bem vindo a nossa concessionária!</h1>
+            <h5 class="h5 d-block d-sm-none">Bem vindo a nossa concessionária!</h5>
+            <h2 class="display-4 d-none d-sm-block">Bem vindo a nossa concessionária!</h2>
             <p>
               Usado por mais de 1 milhão de pessoas, o AutoForce é uma ferramenta online que vai facilitar sua vida na
               compra de carros.
@@ -111,8 +113,8 @@
             <div class="col-md-6">
               <img src="img/img3.jpg" class="img-fluid">
             </div>
-            <div class="col-md-6">
-              <img src="img/img4.jpg" class="img-fluid">
+            <div class="col-md-6 center">
+              <img src="img/img4.jpg" class="center img-fluid">
             </div>
           </div>
         </div>
@@ -135,22 +137,22 @@
       </div>
     </div>
   </section>
-  <footer>
+  <footer class="footer">
     <div class="container">
       <div class="row">
-        <div class="col-md-2">
+        <div class="col-lg-3 d-none d-lg-block">
           <img src="img/logo.png" class="logo2" width="142">
         </div>
-        <div class="col-md-2">
+        <div class="col-6 col-sm-3 col-lg-2">
           <h4>Menu</h4>
           <ul class="navbar-nav">
-            <li><a href="">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="">Listagem</a></li>
-            <li><a href="">Cadastro</a></li>
+            <li><a href="cadastro.html">Cadastro</a></li>
             <li><a href="">Sobre</a></li>
           </ul>
         </div>
-        <div class="col-md-2">
+        <div class="col-6 col-sm-3 col-lg-2">
           <h4>Titulo</h4>
           <ul class="navbar-nav">
             <li><a href="">Link</a></li>
@@ -158,7 +160,7 @@
             <li><a href="">Link</a></li>
           </ul>
         </div>
-        <div class="col-md-2">
+        <div class="col-6 col-sm-3 col-lg-2">
           <h4>Titulo</h4>
           <ul class="navbar-nav">
             <li><a href="">Link</a></li>
@@ -166,7 +168,7 @@
             <li><a href="">Link</a></li>
           </ul>
         </div>
-        <div class="col-md-4">
+        <div class="col-6 col-sm-3 col-lg-3">
           <ul>
             <li>
               <a href=""><img src="img/facebook.png"></a>
@@ -182,6 +184,7 @@
       </div>
     </div>
   </footer>
+  
 </body>
 
 </html>
