--- a/cadastro.html
+++ b/cadastro.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <nav class="fixed-top navbar navbar-expand-sm navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
 
         <!-- Logo -->
         <a href="" class="navbar-brand">
@@ -46,8 +46,17 @@
             </ul>
         </div>
     </nav>
-    <div class="container-fluid">
-        <form>
+    <div class="container-fluid mb-5">
+        <div class="text-center mt-5">
+            <h2 class="section-heading text-uppercase">Contato</h2>
+            <h3 class="section-subheading text-muted">Entre em contato para futuras negociações sobre veículos.</h3>
+            <br>
+            <br>
+            <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p></div>
+            <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p></div>
+            <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p></div>
+        </div>
+        <form class="px-5">
             <div class="row">
                 <div class="form-group col-md-6">
                     <label for="marca">Marca:</label>
@@ -99,13 +108,8 @@
             </div>
 
         </form>
-
-        <div class="row">
-            Rodape
-        </div>
-
     </div>
-    <footer class="fixed-bottom">
+    <footer class="">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 d-none d-lg-block">
