--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
   </nav>
 
-  <section id="home" class="bg-dark">
+  <section id="home" class="mt-5 pt-4 bg-dark">
     <!-- Início seção home -->
     <div class="container">
       <div class="row">
