--- a/editar.html
+++ b/editar.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-    <title>Cadastro</title>
+    <title>Editar</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -102,7 +102,7 @@
                 </div>
             </div>
             <div class="row justify-content-end">
-                <input class="btn btn-primary" type="submit" value="Cadastrar Veículo">
+                <input class="btn btn-success" type="submit" value="Salvar Edição">
                 <input class="btn btn-secondary ml-2 mr-3" type="submit" value="Limpar">
             </div>
         </form>
