--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
+  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+  crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"></script>
+  integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+  crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-    crossorigin="anonymous"></script>
+  integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+  crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/sticky-footer/">
+  integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/sticky-footer/">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
-    integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+  integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/style.css">
   <title>Home</title>
 </head>
@@ -28,8 +28,8 @@
   <nav class="fixed-top navbar navbar-expand-sm navbar-dark bg-dark">
 
     <!-- Logo -->
-    <a href="" class="navbar-brand">
-      <img src="./img/logo.png" class="logo" alt="">
+    <a href="index.html" class="navbar-brand">
+      <img src="./img/logo.png" class="logo" alt="Logo">
     </a>
     <!-- Menu Hamburguer -->
     <button class="navbar-toggler" data-toggle="collapse" data-target="#navegacao">
@@ -43,13 +43,13 @@
           <a href="index.html" class="nav-link">Home</a>
         </li>
         <li class="nav-item">
-          <a href="" class="nav-link">Listagem</a>
+          <a href="listagem.html" class="nav-link">Listagem</a>
         </li>
         <li class="nav-item">
           <a href="cadastro.html" class="nav-link">Cadastro</a>
         </li>
         <li class="nav-item">
-          <a href="" class="nav-link">Sobre</a>
+          <a href="sobre.html" class="nav-link">Sobre</a>
         </li>
       </ul>
     </div>
@@ -68,25 +68,6 @@
               Usado por mais de 1 milhão de pessoas, o AutoForce é uma ferramenta online que vai facilitar sua vida na
               compra de carros.
             </p>
-
-            <form class="mt-4 mb-4">
-              <div class="input-group input-group-lg">
-                <input type="text" placeholder="Seu e-mail" class="form-control">
-                <div class="input-group-append">
-                  <button type="button" class="btn btn-secondary">Tenha Força, Seja AutoForce</button>
-                </div>
-              </div>
-            </form>
-
-            <p>Disponível para
-              <a href="" class="btn btn-outline-light">
-                <i class="fab fa-android fa-lg"></i>
-              </a>
-              <a href="" class="btn btn-outline-light">
-                <i class="fab fa-apple"></i>
-              </a>
-            </p>
-
           </div>
         </div>
         <!--/fim textos da seção -->
@@ -140,46 +121,8 @@
   <footer class="footer">
     <div class="container">
       <div class="row">
-        <div class="col-lg-3 d-none d-lg-block">
-          <img src="img/logo.png" class="logo2" width="142">
-        </div>
-        <div class="col-6 col-sm-3 col-lg-2">
-          <h4>Menu</h4>
-          <ul class="navbar-nav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="">Listagem</a></li>
-            <li><a href="cadastro.html">Cadastro</a></li>
-            <li><a href="">Sobre</a></li>
-          </ul>
-        </div>
-        <div class="col-6 col-sm-3 col-lg-2">
-          <h4>Titulo</h4>
-          <ul class="navbar-nav">
-            <li><a href="">Link</a></li>
-            <li><a href="">Link</a></li>
-            <li><a href="">Link</a></li>
-          </ul>
-        </div>
-        <div class="col-6 col-sm-3 col-lg-2">
-          <h4>Titulo</h4>
-          <ul class="navbar-nav">
-            <li><a href="">Link</a></li>
-            <li><a href="">Link</a></li>
-            <li><a href="">Link</a></li>
-          </ul>
-        </div>
-        <div class="col-6 col-sm-3 col-lg-3">
-          <ul>
-            <li>
-              <a href=""><img src="img/facebook.png"></a>
-            </li>
-            <li>
-              <a href=""><img src="img/twitter.png"></a>
-            </li>
-            <li>
-              <a href=""><img src="img/instagram.png"></a>
-            </li>
-          </ul>
+        <div class="col-md-12 text-center">
+          <h4>@ Instituto Federal do Sul de Minas Gerais - IFSULDEMINAS | Campus Poços de Caldas, MG.</h4>
         </div>
       </div>
     </div>
