--- a/sobre.html
+++ b/sobre.html
@@ -79,12 +79,38 @@
     <footer class="footer">
         <div class="container">
           <div class="row">
-            <div class="col-md-12 text-center">
-              <h4>@ Instituto Federal do Sul de Minas Gerais - IFSULDEMINAS | Campus Poços de Caldas, MG.</h4>
+            <div class="col-lg-3 d-none d-lg-block">
+              <img src="img/logo.png" class="logo2" width="142">
+            </div>
+            <div class="col-6 col-sm-3 col-lg-2">
+              <h4>Menu</h4>
+              <ul class="navbar-nav">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="listagem.html">Listagem</a></li>
+                <li><a href="cadastro.html">Cadastro</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
+              </ul>
+            </div>
+            <div class="col-6 col-sm-3 col-lg-2">
+              <h4>IF SUL DE MINAS</h4>
+              <ul class="navbar-nav">
+                <li><a href="https://portal.pcs.ifsuldeminas.edu.br/" target="_blank">Campus Poços de Caldas</a></li>
+              </ul>
+            </div>
+            <div class="col-6 col-sm-3 col-lg-2 mt-5 mt-sm-0">
+              <h4>Tabela fipe</h4>
+              <ul class="navbar-nav">
+                <li><a href="https://veiculos.fipe.org.br/" target="_blank">Preços</a></li>
+              </ul>
+            </div>
+            <div class="col-6 col-sm-3 col-lg-3  mt-5 mt-sm-0 text-center">
+                  <a href="https://www.facebook.com/" target="_blank"><img src="img/facebook.png"></a>
+                  <a href="https://twitter.com/" target="_blank"><img src="img/twitter.png"></a>
+                  <a href="https://instagram.com/" target="_blank"><img src="img/instagram.png"></a>
             </div>
           </div>
         </div>
-      </footer>
+    </footer>
 </body>
 
 </html>
