--- a/listagem.html
+++ b/listagem.html
@@ -63,7 +63,7 @@
                     <input class="form-control" type="text" id="pesquisar">
                 </div>
                 <div class="col-12 col-sm-2">
-                    <input class="btn btn-primary col-12" type="submit" value="Buscar">
+                    <input class="btn btn-primary col-12" type="button" value="Buscar">
                 </div>
             </div>
         </form>
@@ -85,8 +85,8 @@
             </div>
         </div>
         <div class="row justify-content-end py-3 border-bottom">
-            <input class="btn btn-primary" type="submit" value="Editar">
-            <input class="btn btn-danger ml-2 mr-3" type="submit" value="Excluir">
+            <input class="btn btn-primary" type="button" onclick="irEditar()" value="Editarf">
+            <input class="btn btn-danger ml-2 mr-3" type="button" value="Excluir">
         </div>
         <div class="row p-3">
             <div class="col-lg-4 text-center">
@@ -106,8 +106,8 @@
             </div>
         </div>
         <div class="row justify-content-end py-3 border-bottom">
-            <input class="btn btn-primary" type="submit" value="Editar">
-            <input class="btn btn-danger ml-2 mr-3" type="submit" value="Excluir">
+            <input class="btn btn-primary" type="button" onclick="irEditar()" value="Editar">
+            <input class="btn btn-danger ml-2 mr-3" type="button" value="Excluir">
         </div>
         <div class="row p-3">
             <div class="col-lg-4 text-center">
@@ -127,8 +127,8 @@
             </div>
         </div>
         <div class="row justify-content-end py-3 border-bottom">
-            <input class="btn btn-primary" type="submit" value="Editar">
-            <input class="btn btn-danger ml-2 mr-3" type="submit" value="Excluir">
+            <input class="btn btn-primary" type="button" onclick="irEditar()" value="Editar">
+            <input class="btn btn-danger ml-2 mr-3" type="button" value="Excluir">
         </div>
         <div class="row p-3">
             <div class="col-lg-4 text-center">
@@ -148,8 +148,8 @@
             </div>
         </div>
         <div class="row justify-content-end py-3 border-bottom">
-            <input class="btn btn-primary" type="submit" value="Editar">
-            <input class="btn btn-danger ml-2 mr-3" type="submit" value="Excluir">
+            <input class="btn btn-primary" type="button" value="Editar">
+            <input class="btn btn-danger ml-2 mr-3" type="button" value="Excluir">
         </div>
         <div class="row p-3">
             <div class="col-lg-4 text-center">
@@ -169,8 +169,8 @@
             </div>
         </div>
         <div class="row justify-content-end py-3 border-bottom">
-            <input class="btn btn-primary" type="submit" value="Editar">
-            <input class="btn btn-danger ml-2 mr-3" type="submit" value="Excluir">
+            <input class="btn btn-primary" type="button" value="Editar">
+            <input class="btn btn-danger ml-2 mr-3" type="button" value="Excluir">
         </div>
     </div>
     <footer class="footer">
