--- a/listagem.html
+++ b/listagem.html
@@ -85,7 +85,7 @@
             </div>
         </div>
         <div class="row justify-content-end py-3 border-bottom">
-            <input class="btn btn-primary" type="button" onclick="irEditar()" value="Editarf">
+            <input class="btn btn-primary" type="button" onclick="irEditar()" value="Editar">
             <input class="btn btn-danger ml-2 mr-3" type="button" value="Excluir">
         </div>
         <div class="row p-3">
@@ -209,5 +209,6 @@
         </div>
     </footer>
 </body>
-
+<script src="js/script.js">
+</script>
 </html>
