--- a/listagem.html
+++ b/listagem.html
@@ -67,7 +67,7 @@
                 </div>
             </div>
         </form>
-        <div class="row mt-1 p-3 border-top">
+        <div class="row mt-1 p-3 border-top" id="vwid">
             <div class="col-lg-4 text-center">
                 <img src="fotos/gol2012.jpg" alt="Carro Gol 2012" width="320px" height="320px">
             </div>
@@ -84,11 +84,11 @@
                 </p>
             </div>
         </div>
-        <div class="row justify-content-end py-3 border-bottom">
+        <div class="row justify-content-end py-3 border-bottom" id="vwid2">
             <input class="btn btn-primary" type="button" onclick="irEditar()" value="Editar">
-            <input class="btn btn-danger ml-2 mr-3" type="button" value="Excluir">
+            <input class="btn btn-danger ml-2 mr-3" type="button" onclick="excluir('Volkswagen')" value="Excluir">
         </div>
-        <div class="row p-3">
+        <div class="row p-3" id="bmwid">
             <div class="col-lg-4 text-center">
                 <img src="fotos/bmw320i2010.jpg" alt="Carro BMW 320i" width="320px" height="320px">
             </div>
@@ -105,11 +105,11 @@
                 </p>
             </div>
         </div>
-        <div class="row justify-content-end py-3 border-bottom">
+        <div class="row justify-content-end py-3 border-bottom" id="bmwid2">
             <input class="btn btn-primary" type="button" onclick="irEditar()" value="Editar">
-            <input class="btn btn-danger ml-2 mr-3" type="button" value="Excluir">
+            <input class="btn btn-danger ml-2 mr-3" type="button" onclick="excluir('BMW')" value="Excluir">
         </div>
-        <div class="row p-3">
+        <div class="row p-3" id="Hondaid">
             <div class="col-lg-4 text-center">
                 <img src="fotos/civic2010.jpg" alt="Carro Honda Civic" width="320px" height="320px">
             </div>
@@ -126,11 +126,11 @@
                 </p>
             </div>
         </div>
-        <div class="row justify-content-end py-3 border-bottom">
+        <div class="row justify-content-end py-3 border-bottom" id="Hondaid2">
             <input class="btn btn-primary" type="button" onclick="irEditar()" value="Editar">
-            <input class="btn btn-danger ml-2 mr-3" type="button" value="Excluir">
+            <input class="btn btn-danger ml-2 mr-3" type="button" onclick="excluir('Honda')" value="Excluir">
         </div>
-        <div class="row p-3">
+        <div class="row p-3" id="Volkswagen2id">
             <div class="col-lg-4 text-center">
                 <img src="fotos/parati2012.jpg" alt="Carro Parati" width="320px" height="320px">
             </div>
@@ -147,11 +147,11 @@
                 </p>
             </div>
         </div>
-        <div class="row justify-content-end py-3 border-bottom">
-            <input class="btn btn-primary" type="button" value="Editar">
-            <input class="btn btn-danger ml-2 mr-3" type="button" value="Excluir">
+        <div class="row justify-content-end py-3 border-bottom" id="Volkswagen2id2">
+            <input class="btn btn-primary" type="button" onclick="irEditar()" value="Editar">
+            <input class="btn btn-danger ml-2 mr-3" type="button" onclick="excluir('Volkswagen2')" value="Excluir">
         </div>
-        <div class="row p-3">
+        <div class="row p-3" id="Fiatid">
             <div class="col-lg-4 text-center">
                 <img src="fotos/uno2011.jpg" alt="Carro Uno" width="320px" height="320px">
             </div>
@@ -168,9 +168,9 @@
                 </p>
             </div>
         </div>
-        <div class="row justify-content-end py-3 border-bottom">
-            <input class="btn btn-primary" type="button" value="Editar">
-            <input class="btn btn-danger ml-2 mr-3" type="button" value="Excluir">
+        <div class="row justify-content-end py-3 border-bottom" id="Fiatid2">
+            <input class="btn btn-primary" type="button" onclick="irEditar()" value="Editar">
+            <input class="btn btn-danger ml-2 mr-3" type="button" onclick="excluir('Fiat')" value="Excluir">
         </div>
     </div>
     <footer class="footer">
